# api/openapi/notification.yml
@@ -34,6 +34,27 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /notification/unsubscribe:
+    post:
+      summary: Unsubscribe to notification
+      operationId: unsubscribeNotification
+      requestBody:
+        description: Delete Token from a server
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Subscriber'
+      responses:
+        '200':
+          description: todo
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /notification/status:
     post:
       summary: Subscriber Status
