# internal/ports/openapi.gen.go
@@ -1,6 +1,6 @@
 // Package ports provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version (devel) DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
 package ports
 
 import (
@@ -21,6 +21,9 @@ type ServerInterface interface {
 	// Subscribe to notification
 	// (POST /notification/subscribe)
 	SubscribeNotification(w http.ResponseWriter, r *http.Request)
+	// Unsubscribe to notification
+	// (POST /notification/unsubscribe)
+	UnsubscribeNotification(w http.ResponseWriter, r *http.Request)
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -68,6 +71,21 @@ func (siw *ServerInterfaceWrapper) SubscribeNotification(w http.ResponseWriter, 
 
 	var handler = func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.SubscribeNotification(w, r)
+	}
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler(w, r.WithContext(ctx))
+}
+
+// UnsubscribeNotification operation middleware
+func (siw *ServerInterfaceWrapper) UnsubscribeNotification(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var handler = func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.UnsubscribeNotification(w, r)
 	}
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -198,6 +216,9 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	})
 	r.Group(func(r chi.Router) {
 		r.Post(options.BaseURL+"/notification/subscribe", wrapper.SubscribeNotification)
+	})
+	r.Group(func(r chi.Router) {
+		r.Post(options.BaseURL+"/notification/unsubscribe", wrapper.UnsubscribeNotification)
 	})
 
 	return r
