# internal/ports/openapi_types.gen.go
@@ -1,6 +1,6 @@
 // Package ports provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version (devel) DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
 package ports
 
 // Error defines model for Error.
@@ -39,6 +39,9 @@ type SubscriberStatusJSONBody Subscriber
 // SubscribeNotificationJSONBody defines parameters for SubscribeNotification.
 type SubscribeNotificationJSONBody Subscriber
 
+// UnsubscribeNotificationJSONBody defines parameters for UnsubscribeNotification.
+type UnsubscribeNotificationJSONBody Subscriber
+
 // SendNotificationJSONRequestBody defines body for SendNotification for application/json ContentType.
 type SendNotificationJSONRequestBody SendNotificationJSONBody
 
@@ -47,3 +50,6 @@ type SubscriberStatusJSONRequestBody SubscriberStatusJSONBody
 
 // SubscribeNotificationJSONRequestBody defines body for SubscribeNotification for application/json ContentType.
 type SubscribeNotificationJSONRequestBody SubscribeNotificationJSONBody
+
+// UnsubscribeNotificationJSONRequestBody defines body for UnsubscribeNotification for application/json ContentType.
+type UnsubscribeNotificationJSONRequestBody UnsubscribeNotificationJSONBody
